--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="siamo">
             <h2>Benvenuti nel nostro sito!</h2>
             <h3>Qui troverete delle ricette tipiche siciliane da poter gustare<br> anche a casa vostra attraverso la bellezza della cucina.</h3>
-            <h3><a class="piu" href="Chi_siamo.html">SCOPRI DI PIÙ</a></h3>
+            <h3><a class="piu" href="chi_siamo.html">SCOPRI DI PIÙ</a></h3>
         </div>
     </section>
     
