--- a/palermo.html
+++ b/palermo.html
@@ -6,38 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PALERMO</title>
     <link rel="stylesheet" href="css/stile.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img class="logo" src="immagini/png/RICETTESICILIANE.png" alt="logo">
+        <div>
+            <a href="index.html"><img class="logo" src="immagini/png/RICETTESICILIANE.png" alt="logo"></a>
+        </div>
+        <input class="checkbox" type="checkbox" name="" id="" />
+            <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="messina.html">MESSINA</a></li>
                 <li><a href="catania.html">CATANIA</a></li>
                 <li><a class="active" href="palermo.html">PALERMO</a></li>
-                <li><a href="chi_siamo.html">CHI SIAMO</a></li>
+                <li><a href="storia.html">STORIA</a></li>
             </ul>
         </nav>
     </header>
 
     </section>
         <div class="intro2">
-            <h1>PALERMO</h1>
-            <h3>storie e sapori</h3>
+            <div class="intro_testo">
+                <h1>PALERMO</h1>
+                <h3>storie e sapori</h3>
+            </div>
         </div>
     </section>
     
     <main>
         <section class="descrizione">
             <img class="img" src="immagini/PALERMO/PALERMO.jpg" alt="uno">
-            <p>La cucina palermitana, come tutta la cucina siciliana in generale, rientra a pieno nel modello nutrizionale della dieta mediterranea, riconosciuta dall'UNESCO.
-                <br>
-                Prevede l'abbondante utilizzo di alimenti di origine vegetale, di carni rosse, carni bianche e il pescato. Molto importante i latticini, formaggi locali e l'utilizzo dell'olio d'oliva come principale condimento e fonte di grassi.
-                <br>
-                In Sicilia un'antichissima tradizione per cui il vino è la principale bevanda alcolica che accompagna i pasti palermitani. Interesse è il "cibo da strada", ancora largamente diffuso. Molto presente anche la cultura e la tradizione culinaria araba, in particolare nei dolci.
-            </p>
-
+            <div>
+                <p>La cucina palermitana, come tutta la cucina siciliana in generale, rientra a pieno nel modello nutrizionale della dieta mediterranea, riconosciuta dall'UNESCO.</p>                
+                <p>Prevede l'abbondante utilizzo di alimenti di origine vegetale, di carni rosse, carni bianche e il pescato. Molto importante i latticini, formaggi locali e l'utilizzo dell'olio d'oliva come principale condimento e fonte di grassi.</p>
+                <p>In Sicilia un'antichissima tradizione per cui il vino è la principale bevanda alcolica che accompagna i pasti palermitani. Interesse è il "cibo da strada", ancora largamente diffuso. Molto presente anche la cultura e la tradizione culinaria araba, in particolare nei dolci.</p>
+            </div>
         </section>
         
         <section class="titolo">
@@ -75,8 +86,6 @@
         <div calss="testof">
             <p>
                 <a href="https://mail.google.com">ricettesiciliane@gmail.com</a>
-                <br>
-                +00 012 345 6789
             </p>
         </div>
     </footer>
