add HTML, CSS, IMG

--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <img  class="logo" src="immagini/png/RICETTESICILIANE.png" alt="logo">
+        <div style="z-index: 3">
+            <img  class="logo" src="immagini/png/RICETTESICILIANE.png" alt="logo">
+        </div>    
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
