--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div style:"z-index: 3">
+        <div style="z-index: 3">
             <a href="index.html"><img class="logo" src="immagini/png/RICETTESICILIANE.png" alt="logo"></a>
         </div>
         <input class="checkbox" type="checkbox" name="" id="" />
