add HTML, CSS, IMG

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
             <h2>CHI SIAMO</h2>
         </section>
         <div class="chisiamo">
-
             <div>
-                <p>Nel nostro mondo culinario, dove la tradizione siciliana si fonde con la passione per la buona cucina,<br>
+                <p>In questo mondo culinario, dove la tradizione siciliana si fonde con la passione per la buona cucina,<br>
                      verranno esplorate le ricette autentiche e irresistibili delle città di Messina, Catania e Palermo.<br>
                     La nostra missione è preservare e valorizzare le autentiche ricette siciliane.<br>
-                    Ogni ricetta è un viaggio attraverso i sapori e le tradizioni di questa terra ricca di storia e passione.</p>
+                    Ogni ricetta è un viaggio attraverso i sapori e le tradizioni di questa terra ricca di storia e passione.
+                </p>
             </div>
         </div>
 
