--- a/storia.html
+++ b/storia.html
@@ -34,27 +34,34 @@
     </section>
         <div class="intro2">
             <div class="intro_testo">
-                <h1>CHI SIAMO</h1>
+                <h1>STORIA</h1>
+                <h3>di una tradizione culinaria</h3>
             </div>
         </div>
     </section>
     <main>
         <div class="storia">
-            <p>Benvenuti nel nostro mondo culinario, dove la tradizione siciliana si fonde con la passione per la buona cucina, esplorando le ricette autentiche e irresistibili delle città di Messina, Catania e Palermo.
-                <br><br>
-                Un viaggio gastronomico inizia con l'amore per gli ingredienti freschi, selezionati con cura per portare in tavola il vero sapore della Sicilia. 
-                Ogni piatto che condividiamo con voi racconta la storia e le tradizioni tramandate di generazione in generazione.
-                <br><br>
-                A Messina, culla di antiche culture e incantevoli paesaggi marittimi, scoprirete piatti che riflettono l'essenza del Mediterraneo. 
-                Catania, con la sua vivace atmosfera e la ricchezza dei suoi mercati, ci ispira a creare piatti che fondono sapori intensi e freschezza. 
-                Palermo, con la sua storia affascinante e la varietà dei suoi ingredienti, ci invita a esplorare nuovi territori culinari.
-                <br><br>
-                La nostra missione è preservare e valorizzare le autentiche ricette siciliane, offrendo a voi un assaggio dell'arte culinaria che rende la Sicilia unica nel panorama gastronomico mondiale.                     Ogni ricetta è un viaggio attraverso i sapori e le tradizioni di questa terra ricca di storia e passione.
-                <br><br>
-                Unisciti a noi nel nostro viaggio culinario e sperimenta l'emozione di cucinare e gustare le autentiche ricette siciliane. 
-                Condividiamo con voi non solo il cibo, ma anche la gioia di creare e assaporare momenti indimenticabili a tavola. 
-                Benvenuti in RicetteSiciliane, dove la Sicilia si esprime attraverso il gusto.
-            </p>
+            <div class="testo_uno">
+                <div>
+                    <p>La cucina siciliana è l'espressione dell'arte culinaria sviluppatasi in Sicilia e strettamente collegata alle vicende storiche, 
+                    culturali e religiose dell'isola.
+                    Questa cucina è stata profondamente influenzata dalle varie culture che hanno attraversato l'isola nel corso della storia, in particolare: quella greca antica, bizantina, araba, ebraica, spagnola, francese e del resto d'Italia.
+                    </p>
+                    <p>
+                    Variegata e articolata, la cucina siciliana è ritenuta da alcuni la più ricca di specialità e la più scenografica d'Italia.
+                    Grazie al suo clima mite, l'isola è ricca di spezie e piante aromatiche: origano, menta, rosmarino, 
+                    basilico vengono utilizzati largamente. 
+                    </p>
+                    <p>Terreno fertile produce arance e limoni in grande quantità. Mandorle, ficodindia, pistacchio e olive sono altri simboli culinari nei quali l'isola eccelle.</p>
+                </div>
+                <div>
+                    <img class="img" src="immagini/png/tre_piatti.png" alt="uno">
+                </div>
+            </div> 
+            <div class="testo_due">
+                <p>Gran parte della cucina dell'isola si basa sull'uso di ortaggi e verdure fresche come melanzane, peperoni e pomodori, e pesce come tonno, pesce spada, pesce azzurro, polpo, seppie, ricci di mare, orata e branzino. Alcuni dei cibi più noti a livello globale, vere e proprie icone della Sicilia nel mondo, sono il cannolo siciliano, la cassata siciliana, la pasta di mandorle, la frutta Martorana, gli iris, la granita, il gelato e le arancine.</p>
+                <p>Una sua caratteristica è quella di avere un gran numero di pietanze a diffusione esclusivamente locale: nella maggior parte dei casi si tratta di varianti della stessa ricetta regionale, ma in alcuni casi questi cibi, come ad esempio le panelle palermitane, hanno una preparazione e una commercializzazione rilevata esclusivamente nella loro zona di origine.</p>
+            </div>
         </div>
     </main>
 
